--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4600,7 +4600,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color:#FFE4B5;
+  color:rgba(0, 0, 0, .5;
   background-color: transparent;
 }
 .navbar-inverse .navbar-text {
