--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4500,7 +4500,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
-  color: #FFDAB9;
+  color: rgba(0, 0, 0, .5);
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
@@ -4600,7 +4600,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color:rgba(0, 0, 0, .5;
+  color:#FFE4B5;
   background-color: transparent;
 }
 .navbar-inverse .navbar-text {
